added model structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Demo Animation</title>
     <style>
         body {
             background: #990066;
@@ -15,7 +15,7 @@
 <body onload="init();" style="margin:0px;">
     <!--    <canvas style="background:lightblue;" id="demoCanvas" width="375" height="660"></canvas>-->
 
-    <canvas id="demoCanvas" style=""></canvas>
+    <canvas id="canvas" style=""></canvas>
 
     <!--    <div id="foo" style="background:blue;">test</div>-->
 
@@ -23,8 +23,14 @@
     <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
+    <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.js"></script>-->
 
+
+    <script src="js/models/models.js"></script>
+
+    <script src="js/data.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/animation.js"></script>
 </body>
 
 </html>
